crates/toml/tests/snapshots/invalid/float/leading-zero-neg.stderr
TOML parse error at line 1, column 21
  |
1 | leading-zero-neg = -03.14
  |                     ^
unexpected leading zero, expected nothing
